@@ -107,6 +107,7 @@ private:
   QHash<int, QList<QStringList> > m_trackList;
   QPointer<KIO::StoredTransferJob> m_job;
   bool m_isTV;
+  bool m_multiDiscTracks;
 
   enum ImageSize {
     NoImage=0,
