@@ -1,3 +1,7 @@
+2025-02-08  Robby Stephenson  <robby@periapsis.org>
+
+	* Added option to collapse multi-disc tracks into single field (Bug 499401).
+
 2025-02-01  Robby Stephenson  <robby@periapsis.org>
 
 	* Added configurable image size to Discogs data source.
